syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "tobeh.Valmar";
package stats;

enum LeaderboardMode {
  BUBBLES = 0;
  DROPS = 1;
  AWARDS = 2;
}

enum BubbleProgressIntervalMode {
  DAY = 0;
  WEEK = 1;
  MONTH = 2;
}

// Service definition for scene resource access
service Stats {
  
  // Get the bubble range of a member in a timespan
  rpc GetBubbleTimespanRange (BubbleTimespanRangeRequest) returns (BubbleTimespanRangeReply);
  
  // Get the bubble progress in a time range with given range steps
  rpc GetBubbleProgress (GetBubbleProgressMessage) returns (BubbleProgressMessage);
  
  // gets the member leaderboard, either global or for a guild, sorted by bubbles or drops
  rpc GetLeaderboard (GetLeaderboardMessage) returns (LeaderboardMessage);
}

message GetBubbleProgressMessage {
  int32 login = 1;
  google.protobuf.Timestamp startDate = 2;
  google.protobuf.Timestamp endDate = 3;
  BubbleProgressIntervalMode interval = 4;
}

message BubbleProgressMessage {
  repeated BubbleProgressEntryMessage entries = 1;
}

message BubbleProgressEntryMessage {
  google.protobuf.Timestamp date = 1;
  int32 bubbles = 2;
}

message BubbleTimespanRangeRequest {
  int32 login = 1;
  google.protobuf.Timestamp startDate = 2;
  google.protobuf.Timestamp endDate = 3;
}

message BubbleTimespanRangeReply {
  int32 startAmount = 1;
  int32 endAmount = 2;
}

message GetLeaderboardMessage {
  google.protobuf.Int64Value guildId = 1;
  LeaderboardMode mode = 2;
}

message LeaderboardMessage {
  repeated LeaderboardRankMessage entries = 1;
}

message LeaderboardRankMessage {
  int32 rank = 1;
  int32 login = 2;
  int64 discordId = 3;
  string username = 4;
  int32 bubbles = 5;
  int32 drops = 6;
  int32 awardScore = 7;
}